# eschec

./: .envrc  .gitignore  Cargo.toml  README.md  README.norg  bacon.toml  build.rs  flake.nix  justfile  next.md  thinking.md  tuned_params.toml
benches/: board_benches.rs  engine_benches.rs  move_ordering_benches.rs  primitive_benches.rs
config/: default_params.toml  normalized_tuned_params.toml  tuned_params.toml
docs/: dev_log.md  eval_test_itc_6threads.txt  eval_test_stc_0threads.txt  eval_test_stc_6threads.txt  eval_test_v7_stc_10_threads.txt  evaluation.norg  move_ordering.norg  search_opt.txt  zobrist.norg
examples/: board_update_strategies.rs
extras/book_creater/: analyze_logs.py  parser.py  requirements.txt  san_to_uci_verifier.py  selecter.py  temp.py
gauntlet/books/: 2moves.pgn  balanced_book.epd
guantlet/books/: 2moves.pgn
src/: cli.rs  lib.rs  main.rs  perft.rs  prelude.rs
src/board/: components.rs  fen.rs  mod.rs  moves.rs  search.rs  tests.rs  zobrist.rs
src/board/evaluation/: material.rs  mobility.rs  mod.rs  position.rs
src/comms/: mod.rs  uci.rs  uci_parser.rs
src/evaluation/: accumulator.rs  king_safety.rs  material.rs  mobility.rs  mod.rs  pawn_structure.rs  position.rs  score.rs
src/moves/: attack_data.rs  legacy.rs  magic_constants.rs  magics.rs  mod.rs  move_buffer.rs  move_gen.rs  move_info.rs  precomputed.rs  pseudo_legal.rs  tests.rs
src/precomputed/: magic_constants.rs  mod.rs  move_tables.rs  pawn_tables.rs
src/search/: alpha_beta.rs  common.rs  mod.rs  move_ordering.rs  move_picker.rs  tt.rs  zobrist.rs
src/tuning/: gd_tuner.rs  macros.rs  mod.rs  params.rs  spsa_tuner.rs  tests.rs  texel.rs  trace.rs
src/utils/: cli.rs  log.rs  mod.rs  perft.rs  prng.rs  sts_runner.rs
test_suites/: sts_blitz.epd
test_suites/sts/: STS2.epd  STS3.epd  STS4.epd  STS5.epd  STS6.epd  STS8.epd  STS9.epd  STS_10.epd  STS_11.epd  STS_12.epd  STS_13.epd  STS_14.epd  STS_15.epd  sts_blitz.epd
test_suites/sts_v7/: sts_v7_issued.epd
