[package]
name = "eschec"
version = "0.1.1"
edition = "2024"
description = "A chess suite written in rust"
authors = ["Akira"]
default-run = "eschec"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.release-dhat]
inherits = "release"
debug = 1

[[bin]]
name = "eschec"
path = "src/main.rs"

[[bin]]
name = "magic_gen"
path = "src/bin/magic_gen.rs"

[[bin]]
name = "eval_tester"
path = "src/bin/eval_tester.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
color-backtrace = "0.7.0"
dhat = { version = "0.3.3", optional = true }
miette = { version = "7.5.0", features = ["fancy"] }
rand = "0.9.0"
rayon = { version = "1.10.0", optional = true }
shell-words = "1.1.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.6.0"

[features]
default = ["simd"]
random = []
dhat-heap = ["dep:dhat"]
rayon = ["dep:rayon"]
simd = []

[[bench]]
name = "board_benches"
harness = false

[[bench]]
name = "engine_benches"
harness = false

[[bench]]
name = "primitive_benches"
harness = false
