[package]
name = "eschec"
version = "0.1.10"
edition = "2024"
description = "A chess suite written in rust"
authors = ["Akira"]
default-run = "eschec"

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.release-dhat]
inherits = "release"
debug = 1

[[bin]]
name = "eschec"
path = "src/main.rs"

[[bin]]
name = "magic_gen"
path = "src/bin/magic_gen.rs"
required-features = ["rayon"]

[[bin]]
name = "eval_tester"
path = "src/bin/eval_tester.rs"

[dependencies]
# Logging
chrono = "0.4.41"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# Cli and error
clap = { version = "4.5.38", features = ["derive"] }
miette = { version = "7.5.0", features = ["fancy"] }
shell-words = "1.1.0"

rand = "0.9.2"
# Optional
color-backtrace = { version = "0.7.0", optional = true }
dhat = { version = "0.3.3", optional = true }
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
criterion = "0.6.0"

[features]
default = ["dev-tools"]
simd = []
# Feature for heap profiling
dhat-heap = ["dep:dhat"]
# Feature for the magic number generator binary
rayon = ["dep:rayon"]
# Feature for development-only tools
dev-tools = ["dep:color-backtrace"]

[[bench]]
name = "board_benches"
harness = false

[[bench]]
name = "engine_benches"
harness = false

[[bench]]
name = "primitive_benches"
harness = false
